--- a/scss/blocs.scss
+++ b/scss/blocs.scss
@@ -165,25 +165,25 @@
 	&__title {
 		text-align: center;
 	}
+}
 
-	&__list {
-		@include flexbox;
-		justify-content: center;
-		align-items: center;
-		flex-wrap: wrap;
-		column-gap: 120px;
-		row-gap: 55px;
-	}
+.list {
+	@include flexbox;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	column-gap: 120px;
+	row-gap: 55px;
+}
 
-	&__list-item {
-		@include flexbox;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		row-gap: 30px;
-	}
+.item {
+	@include flexbox;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	row-gap: 30px;
 
-	&__list-text {
+	&__text {
 		font-family: 'Georgia';
 		font-size: 20px;
 		text-align: center;
