--- a/scss/style.scss
+++ b/scss/style.scss
@@ -43,6 +43,10 @@ $black: #000000;
 @import "footer.scss";
 
 //****************************************ОБЩИЕ ПАРАМЕТРЫ***************************************************
+.lock {
+	overflow: hidden;
+}
+
 .container__page {
   padding: 80px 0 100px;
 }
