--- a/scss/media.scss
+++ b/scss/media.scss
@@ -133,12 +133,39 @@
   }
   
   .nav {
-    display: none;
+    position: fixed;
+		top: 0;
+		right: 0;
+		width: 100%;
+		height: 100%;
+		background-color: $dark;
+		overflow: auto;
+		@include anim(0.5s, 0s);
+		right: -100%;
+
+		&--active {
+			right: 0;
+		}
+
+		&__list {
+			flex-direction: column;
+			gap: 40px;
+		}
+
+		&__item {
+			font-size: 32px;
+		}
   }
 
   .icon {
     display: block;
     background-color: transparent;
+		@include anim(0.5s, 0s);
+
+		&--active {
+			transform: rotate(90deg);
+			@include anim(0.5s, 0s);
+		}
   }
 
   /*** Start ***/
@@ -416,6 +443,10 @@
 			padding: 30px 10px;
 		}
   }
+
+	.nav--pets {
+		background-color: $light-grey;
+	}
 
   /*** Pets ***/
   .friends {
